--- a/MDSApplication/pom.xml
+++ b/MDSApplication/pom.xml
@@ -13,7 +13,7 @@
         <artifactId>ojdeploy</artifactId>
         <version>12.1.3-0-0</version>
         <configuration>
-          <ojdeploy>${oracleHome}/jdeveloper/jdev/bin/ojdeploy</ojdeploy>
+          <ojdeploy>${oracleHome}/jdeveloper/jdev/bin/ojdeploy.exe</ojdeploy>
           <workspace>${basedir}/MDSApplication.jws</workspace>
           <profile>mdsBundle</profile>
           <usemaven>true</usemaven>
